=== rmw ChangeLog ===

2021-04-26

  * rmw v0.7.07 released

2021-04-25

  * bugfix: list output (rmw -lv) shows all removable devices as
  attached even for those that are detached.

2021-04-23

  * (for testing) Replace RMWTRASH(=fake-year) with RMW_FAKE_YEAR(=true)

2021-04-08

  * bugfix: When restoring files from removable media or devices, rmw
  will now process relative paths (this primarily affects users who
  trash a file with the "move to trash" option from their desktop, and
  then later try to restore with rmw. See
  https://github.com/theimpossibleastronaut/rmw/issues/299 for more
  information).

  * Removed deprecated config option (purgeDays)

  * Minor updates to tests infrastructure


2021-03-01

  * rmw v0.7.06 released

2021-02-25

  * When using -s,--select, the number of lines the terminal has will
  be checked. The number of items in the list will be based on that; if
  it doesn't meet the minumum requirement, rmw will exit.

2021-02-23

  * Allow optional argument to -g/--purge that can override the value of
  'purge_after' in the configuration file (-g[N_DAYS], --purge[=N_DAYS]).

2020-11-30

  * bugfix: restore broken symbolic links instead of giving a "file not
  found" message (issue #292)

2020-11-29

  * Improved handling of file with leading hyphens
  * When an invalid option is given, usage output no longer displays

2020-11-26

  * You can view how many days remain until a file is purged by using
  -vv (with -fg).

2020-08-22

  * If lstat() encounters and error, also display the filename/directory it
  was attempting to access.

2020-06-29

  * add '-m, --most-recent-list' option: list most recently rmw'ed files

2020-06-16

  * rmw v0.7.05 released

  * rmw will now refuse to move a waste folder or a file that resides
  within a waste folder (This feature was in place before, but at some
  point Andy accidentally removed the code).

2020-06-07

  * Feature removed: restore with '-z' using only the basename from any