@@ -104,11 +104,11 @@ matrix:
       dist: focal
       compiler: clang
 
-# purging test fails on osx
-# See https://github.com/theimpossibleastronaut/rmw/issues/283 for details
-# osx
     - os: osx
-      osx_image: xcode11.2
+      osx_image: xcode9.4
+      env: XCODE="true"
+    - os: osx
+      osx_image: xcode10.3
       env: XCODE="true"
     - os: osx
       osx_image: xcode11.6
@@ -117,8 +117,8 @@ matrix:
       osx_image: xcode12.2
       env: XCODE="true"
 
-  allow_failures:
-    - os: osx
+#  allow_failures:
+#    - os: osx
 
 before_install:
   - echo $CC
